--- a/analysis/multi_group_6traits_15weights_ess_postprocessing_compare.Rmd
+++ b/analysis/multi_group_6traits_15weights_ess_postprocessing_compare.Rmd
@@ -24,7 +24,7 @@ The post-processing steps include the following:
 -   For genes with `susie_pip > thresholds` (0.5 and 0.2), we performed LD mismatch diagnosis.
 -   To address LD mismatches, two strategies were employed:
     -   Fine-mapping the region without LD.
-    -   Removing mismatched SNPs, updating gene Z-scores, and re-fine-mapping with LD.
+    -   Removing mismatched SNPs for all genes in the problematic regions, updating gene Z-scores, re-estimated L, and re-fine-mapping with LD.
 
 ```{r message=FALSE, warning=FALSE}
 library(ctwas)
@@ -241,9 +241,109 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
+
 ```
 
+## Examples for LD-mismatch fixing
 
+
+```{r message=FALSE, warning=FALSE, fig.width=12, fig.height=9}
+weights_origin <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/",trait,"/",trait,".preprocessed.weights.RDS"))
+
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_weights_updated_",trait,".rdata"))
+
+region_id <- "3_110794923_113096852"
+
+finemap_res_rm <- anno_finemap_res(finemap_res_rm,
+                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                          mapping_table = mapping_two,
+                                          add_gene_annot = TRUE,
+                                          map_by = "molecular_id",
+                                          drop_unmapped = TRUE,
+                                          add_position = TRUE,
+                                          use_gene_pos = "mid")
+
+finemap_res_ldmm_nold <- anno_finemap_res(finemap_res_ldmm_nold,
+                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                          mapping_table = mapping_two,
+                                          add_gene_annot = TRUE,
+                                          map_by = "molecular_id",
+                                          drop_unmapped = TRUE,
+                                          add_position = TRUE,
+                                          use_gene_pos = "mid")
+
+finemap_res_ldmm_removesnp <- anno_finemap_res(finemap_res_ldmm_removesnp,
+                                   snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                   mapping_table = mapping_two,
+                                   add_gene_annot = TRUE,
+                                   map_by = "molecular_id",
+                                   drop_unmapped = TRUE,
+                                   add_position = TRUE,
+                                   use_gene_pos = "mid")
+
+finemap_res_rm_gene <- finemap_res_rm[finemap_res_rm$type != "SNP",]
+finemap_res_ldmm_removesnp_gene <- finemap_res_ldmm_removesnp[finemap_res_ldmm_removesnp$type !="SNP",]
+
+
+
+print("locus plot -- after region merge")
+make_locusplot(finemap_res_rm,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+
+print("locus plot -- LD mismatch: no LD")
+
+make_locusplot(finemap_res_ldmm_nold,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+
+print("locus plot -- LD mismatch: snp removed")
+make_locusplot(finemap_res_ldmm_removesnp,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_updated,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+
+finemap_res_rm_gene_region <- finemap_res_rm_gene[finemap_res_rm_gene$region_id == region_id,]
+finemap_res_ldmm_removesnp_gene_region <- finemap_res_ldmm_removesnp_gene[finemap_res_ldmm_removesnp_gene$region_id == region_id,]
+merged_region_gene <- merge(finemap_res_rm_gene_region,finemap_res_ldmm_removesnp_gene_region,by = "id")
+merged_region_gene <- merged_region_gene[,c("id","gene_name.x","z.x","susie_pip.x","cs.x","z.y","susie_pip.y","cs.y")]
+colnames(merged_region_gene) <- c("id","gene_name","z_regionmerge","susie_pip_regionmerge","cs_regionmerge","z_ldmismatch","susie_pip_ldmismatch","cs_ldmismatch")
+
+
+ggplot(data = merged_region_gene, aes(x= z_regionmerge, y= z_ldmismatch)) + 
+  geom_point() +
+  ggtitle("Comparing z-scores before/after removing the problematic SNPs") +
+  theme_minimal()
+
+DT::datatable(merged_region_gene[merged_region_gene$z_ldmismatch != merged_region_gene$z_regionmerge,],caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with different z before / after removing the problematic SNPs'),options = list(pageLength = 10) )
+
+```
 
 # LDL-ukb-d-30780_irnt
 
@@ -394,6 +494,11 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
 ```
 
 
@@ -557,76 +662,14 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
 ```
 
-```{r message=FALSE, warning=FALSE, fig.width=12, fig.height=12}
-weights_origin <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/",trait,"/",trait,".preprocessed.weights.RDS"))
 
-
-finemap_res_rm <- anno_finemap_res(finemap_res_rm,
-                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
-                                          mapping_table = mapping_two,
-                                          add_gene_annot = TRUE,
-                                          map_by = "molecular_id",
-                                          drop_unmapped = TRUE,
-                                          add_position = TRUE,
-                                          use_gene_pos = "mid")
-print("locus plot -- after region merge")
-make_locusplot(finemap_res_rm,
-               region_id = "9_136047132_136605890",
-               ens_db = ens_db,
-               weights = weights_origin,
-               highlight_pip = 0.8,
-               filter_protein_coding_genes = TRUE,
-               filter_cs = TRUE,
-               color_pval_by = "cs",
-               color_pip_by = "cs")
-
-
-
-
-finemap_res_ldmm_nold <- anno_finemap_res(finemap_res_ldmm_nold,
-                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
-                                          mapping_table = mapping_two,
-                                          add_gene_annot = TRUE,
-                                          map_by = "molecular_id",
-                                          drop_unmapped = TRUE,
-                                          add_position = TRUE,
-                                          use_gene_pos = "mid")
-print("locus plot -- LD mismatch: no LD")
-
-make_locusplot(finemap_res_ldmm_nold,
-               region_id = "9_136047132_136605890",
-               ens_db = ens_db,
-               weights = weights_origin,
-               highlight_pip = 0.8,
-               filter_protein_coding_genes = TRUE,
-               filter_cs = TRUE,
-               color_pval_by = "cs",
-               color_pip_by = "cs")
-
-
-
-finemap_res_ldmm_removesnp <- anno_finemap_res(finemap_res_ldmm_removesnp,
-                                   snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
-                                   mapping_table = mapping_two,
-                                   add_gene_annot = TRUE,
-                                   map_by = "molecular_id",
-                                   drop_unmapped = TRUE,
-                                   add_position = TRUE,
-                                   use_gene_pos = "mid")
-print("locus plot -- LD mismatch: snp removed")
-make_locusplot(finemap_res_ldmm_removesnp,
-               region_id = "9_136047132_136605890",
-               ens_db = ens_db,
-               weights = weights_origin,
-               highlight_pip = 0.8,
-               filter_protein_coding_genes = TRUE,
-               filter_cs = TRUE,
-               color_pval_by = "cs",
-               color_pip_by = "cs")
-
-```
 
 # SBP-ukb-a-360
 
@@ -739,6 +782,7 @@ p3 <- ggplot(data = merge_rm_ldmm_removesnp, aes(x= susie_pip.x, y= susie_pip.y)
   theme_minimal()
 
 grid.arrange(p1,p2,p3, ncol = 3)
+
 ```
 
 ## Comparing z-scores and susie_pip
@@ -777,7 +821,162 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
 ```
+
+## Examples for LD-mismatch fixing
+
+### Genes identified after LD mismatch fixing but not before
+
+```{r message=FALSE, warning=FALSE, fig.width=12, fig.height=9}
+
+print("Two genes have PIP == 0 after region merging but PIP > 0.8 after LD mismatch fixed (remove snp method)")
+finemap_res_ldmm_removesnp_problematic_gene[finemap_res_ldmm_removesnp_problematic_gene$id %in% c("ENSG00000103415.11|Artery_Tibial_eQTL","ENSG00000130592.15|Heart_Atrial_Appendage_eQTL"),]
+
+weights_origin <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/",trait,"/",trait,".preprocessed.weights.RDS"))
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_weights_updated_",trait,".rdata"))
+
+
+finemap_res_rm <- anno_finemap_res(finemap_res_rm,
+                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                          mapping_table = mapping_two,
+                                          add_gene_annot = TRUE,
+                                          map_by = "molecular_id",
+                                          drop_unmapped = TRUE,
+                                          add_position = TRUE,
+                                          use_gene_pos = "mid")
+
+finemap_res_ldmm_nold <- anno_finemap_res(finemap_res_ldmm_nold,
+                                          snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                          mapping_table = mapping_two,
+                                          add_gene_annot = TRUE,
+                                          map_by = "molecular_id",
+                                          drop_unmapped = TRUE,
+                                          add_position = TRUE,
+                                          use_gene_pos = "mid")
+
+finemap_res_ldmm_removesnp <- anno_finemap_res(finemap_res_ldmm_removesnp,
+                                   snp_map = updated_data_res_regionmerge[["updated_snp_map"]],
+                                   mapping_table = mapping_two,
+                                   add_gene_annot = TRUE,
+                                   map_by = "molecular_id",
+                                   drop_unmapped = TRUE,
+                                   add_position = TRUE,
+                                   use_gene_pos = "mid")
+
+finemap_res_rm_gene <- finemap_res_rm[finemap_res_rm$type != "SNP",]
+finemap_res_ldmm_removesnp_gene <- finemap_res_ldmm_removesnp[finemap_res_ldmm_removesnp$type !="SNP",]
+
+region_id <- "11_1192365_3644251"
+
+print("locus plot -- after region merge")
+make_locusplot(finemap_res_rm,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+print("locus plot -- LD mismatch: no LD")
+
+make_locusplot(finemap_res_ldmm_nold,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+print("locus plot -- LD mismatch: snp removed")
+make_locusplot(finemap_res_ldmm_removesnp,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_updated,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+
+finemap_res_rm_gene_region <- finemap_res_rm_gene[finemap_res_rm_gene$region_id == region_id,]
+finemap_res_ldmm_removesnp_gene_region <- finemap_res_ldmm_removesnp_gene[finemap_res_ldmm_removesnp_gene$region_id == region_id,]
+merged_region_gene <- merge(finemap_res_rm_gene_region,finemap_res_ldmm_removesnp_gene_region,by = "id")
+merged_region_gene <- merged_region_gene[,c("id","gene_name.x","z.x","susie_pip.x","cs.x","z.y","susie_pip.y","cs.y")]
+colnames(merged_region_gene) <- c("id","gene_name","z_regionmerge","susie_pip_regionmerge","cs_regionmerge","z_ldmismatch","susie_pip_ldmismatch","cs_ldmismatch")
+
+
+ggplot(data = merged_region_gene, aes(x= z_regionmerge, y= z_ldmismatch)) + 
+  geom_point() +
+  ggtitle("Comparing z-scores before/after removing the problematic SNPs") +
+  theme_minimal()
+
+DT::datatable(merged_region_gene[merged_region_gene$z_ldmismatch != merged_region_gene$z_regionmerge,],caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with different z before / after removing the problematic SNPs'),options = list(pageLength = 10) )
+
+
+region_id <- "16_3951195_5068344"
+
+print("locus plot -- after region merge")
+make_locusplot(finemap_res_rm,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+print("locus plot -- LD mismatch: no LD")
+
+make_locusplot(finemap_res_ldmm_nold,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_origin,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+print("locus plot -- LD mismatch: snp removed")
+make_locusplot(finemap_res_ldmm_removesnp,
+               region_id = region_id,
+               ens_db = ens_db,
+               weights = weights_updated,
+               highlight_pip = 0.8,
+               filter_protein_coding_genes = TRUE,
+               filter_cs = TRUE,
+               color_pval_by = "cs",
+               color_pip_by = "cs",panel.heights = c(4,4,1,1))
+
+
+
+finemap_res_rm_gene_region <- finemap_res_rm_gene[finemap_res_rm_gene$region_id == region_id,]
+finemap_res_ldmm_removesnp_gene_region <- finemap_res_ldmm_removesnp_gene[finemap_res_ldmm_removesnp_gene$region_id == region_id,]
+merged_region_gene <- merge(finemap_res_rm_gene_region,finemap_res_ldmm_removesnp_gene_region,by = "id")
+merged_region_gene <- merged_region_gene[,c("id","gene_name.x","z.x","susie_pip.x","cs.x","z.y","susie_pip.y","cs.y")]
+colnames(merged_region_gene) <- c("id","gene_name","z_regionmerge","susie_pip_regionmerge","cs_regionmerge","z_ldmismatch","susie_pip_ldmismatch","cs_ldmismatch")
+
+
+ggplot(data = merged_region_gene, aes(x= z_regionmerge, y= z_ldmismatch)) + 
+  geom_point() +
+  ggtitle("Comparing z-scores before/after removing the problematic SNPs") +
+  theme_minimal()
+
+DT::datatable(merged_region_gene[merged_region_gene$z_ldmismatch != merged_region_gene$z_regionmerge,],caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with different z before / after removing the problematic SNPs'),options = list(pageLength = 10) )
+```
+
+
 
 # SCZ-ieu-b-5102
 
@@ -928,6 +1127,11 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
 ```
 
 
@@ -1081,5 +1285,9 @@ p4 <- ggplot(data = finemap_res_ldmm_removesnp_gene, aes(x= abs(z), y= susie_pip
 
 
 grid.arrange(p1,p2,p3,p4, ncol = 4)
+print("L - estimated in region merge step")
+updated_data_res_regionmerge$updated_region_L[problematic_region_ids]
+load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/post_process_rm_ld/ldmismatch_pipthres05_removesnp_rescreenregion_",trait,".rdata"))
+print("L - re-estimated after updating z_scores, region data")
+screen_res$screened_region_L[problematic_region_ids]
 ```
-
